CarouselSlider is ready

--- a/src/components/Navbar/Navbars.sass
+++ b/src/components/Navbar/Navbars.sass
@@ -1,9 +1,13 @@
 @import '../../index.sass' 
+
 .navbars
- display: flex
- justify-content: space-between
+ // display: flex
+ // justify-content: space-between
+ position: absolute
+ top: 0
 // Style for "navbar"
 .navbar-collapse
+ margin-left: 288px
  background-color: $mainYellow
  width: 760px
  min-height: 48px
