componet Tour is ready

--- a/src/index.sass
+++ b/src/index.sass
@@ -6,12 +6,14 @@
 $mainBlack: #000000
 $mainBlue: #3397e2
 $mainWhite: #ffffff
-$mainGrey: #ececec
+$mainGrey: #f8f7f7
 $mainYellow: #fbd341
+$bgBunner: #004c84
 
 body
  background-color: $mainWhite
  color: $mainBlack
+ font-size: 14px
  font-family: 'Open Sans', sans-serif
 
 img
@@ -20,4 +22,7 @@ img
 ul
  list-style: none
  padding: 0
+ margin: 0
+
+h1,h2,h3,h4,h5,h6,p
  margin: 0
