component SliderTour is ready

--- a/src/components/Tour/Tour.sass
+++ b/src/components/Tour/Tour.sass
@@ -43,10 +43,15 @@
   height: 37px
   border-radius: 50%
   background-color: $mainYellow
+  &:hover
+   text-decoration: none
+
 .line
  margin-top: 10px
  width: 270px
  height: 1px
  background-color: #6a6a6a
  opacity: 0.1
- 
+
+.arrow-right
+ color: $mainBlack 
