component Benefits is ready

--- a/src/components/SliderTour/SliderTour.sass
+++ b/src/components/SliderTour/SliderTour.sass
@@ -9,5 +9,9 @@
    font-weight: 700
   .active
    color: $mainYellow 
- 
-  
+
+.slick-slider
+ max-width: 1300px
+ margin: auto
+.slick-prev:before, .slick-next:before
+ color: $mainBlack
