--- a/src/components/Button/Button.sass
+++ b/src/components/Button/Button.sass
@@ -7,6 +7,7 @@
  background-color: $mainYellow
  padding: 17px 30px
  border-radius: 10px
+ border: 0
  // border: 3px solid $mainYellow
  transition: all 0.3s linear
  // cursor: pointer
