--- a/src/components/Title/Title.sass
+++ b/src/components/Title/Title.sass
@@ -6,3 +6,8 @@
  font-size: 24px
  text-transform: uppercase
  font-weight: 700
+
+@media (max-width: 992px)
+ .section-title
+  text-align: center
+  margin-bottom: 17px
