footer is ready

--- a/src/index.sass
+++ b/src/index.sass
@@ -9,6 +9,7 @@ $mainWhite: #ffffff
 $mainGrey: #f8f7f7
 $mainYellow: #fbd341
 $bgBunner: #004c84
+$bgFooter: #22334d
 
 body
  background-color: $mainWhite
