add fonts,component Сontacts is ready

--- a/src/components/CarouselSider/CarouselSider.sass
+++ b/src/components/CarouselSider/CarouselSider.sass
@@ -1,4 +1,4 @@
-@import '../../index.sass'   
+@import '../../colors.sass'    
  
 .carousel-control-prev-icon, .carousel-control-next-icon
  background-image: none
