--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -1,4 +1,4 @@
-@import '../../index.sass' 
+@import '../../colors.sass'  
 
 .footer
  padding: 50px 0 20px
@@ -30,18 +30,18 @@
    color: $mainWhite
    font-size: 14px
 
-.location
- margin-bottom: 20px
- img
-  margin-right: 10px
-.phone
- margin-bottom: 20px
- img
-  margin-right: 8px
-.social
- margin-top: 42px
- img
-  margin-right: 30px
+ &-location
+  margin-bottom: 20px
+  img
+   margin-right: 10px
+ &-phone
+  margin-bottom: 20px
+  img
+   margin-right: 8px
+ &-social
+  margin-top: 42px
+  img
+   margin-right: 30px
 
 .line
  width: 100%
