--- a/src/index.sass
+++ b/src/index.sass
@@ -1,21 +1,16 @@
+@import './fonts.scss' 
+@import './colors.sass' 
+
 * 
  margin: 0
  padding: 0
  box-sizing: border-box
-
-$mainBlack: #000000
-$mainBlue: #3397e2
-$mainWhite: #ffffff
-$mainGrey: #f8f7f7
-$mainYellow: #fbd341
-$bgBunner: #004c84
-$bgFooter: #22334d
-
+ 
 body
  background-color: $mainWhite
  color: $mainBlack
  font-size: 14px
- font-family: 'Open Sans', sans-serif
+ +light
 
 img
  max-width: 100% //картинка не может быть больше своего родителя
@@ -27,4 +22,3 @@ ul
 
 h1,h2,h3,h4,h5,h6,p
  margin: 0
-
