Navbars  fixed bugs

--- a/src/components/CarouselSider/CarouselSider.sass
+++ b/src/components/CarouselSider/CarouselSider.sass
@@ -1,5 +1,7 @@
 @import '../../colors.sass'    
  
+// .carousel
+//  margin-top: -150px
 .carousel-control-prev-icon, .carousel-control-next-icon
  background-image: none
 
