--- a/src/components/Contacts/Contacts.sass
+++ b/src/components/Contacts/Contacts.sass
@@ -2,12 +2,17 @@
 @import '../../colors.sass' 
 
 .contacts
+ // position: absolute
+ position: fixed
+ top: 0
+ right: 13%
  padding: 23px 0 17px
  display: flex
  justify-content: flex-end
- background-color: $bgFooter
+ background-color: transparent
  +bold
  color: $secondGrey
+ z-index: 999
  
  &-location
   span
@@ -19,8 +24,41 @@
    margin-left: 3px
    color: $secondGrey
    opacity: 0.8
+   &:hover
+    text-decoration: none
  &-social
   margin-left: 62px
   img
    &:last-child
     margin-left: 25px
+
+@media screen and (max-width: 992px) 
+ .contacts
+  padding: 10px 
+  display: flex
+  flex-direction: column
+  &-location
+   span
+  &-phone
+   margin-left: 0
+   a
+    margin-left: 3px
+  &-social
+   margin-left: 0
+   text-align: center
+   img
+    &:last-child
+     margin-left: 10px
+
+@media screen and (max-width: 450px) 
+ .contacts
+  font-size: 10px
+  &-location
+   img
+    width: 10px
+  &-phone
+   img
+    width: 10px
+  &-social
+   img
+    width: 16px
