--- a/src/components/SliderTour/SliderTour.sass
+++ b/src/components/SliderTour/SliderTour.sass
@@ -1,7 +1,9 @@
 @import '../../colors.sass'  
-
+.slide-tour
+ padding: 72px 0 
 .nav
- margin: 70px 0 70px
+ margin: 0 !important
+ 
  li
   a
    font-size: 20px
@@ -11,7 +13,7 @@
    color: $mainYellow 
 
 .slick-slider
- max-width: 1300px
+//  max-width: 1200px
  margin: auto
 .slick-prev:before, .slick-next:before
  color: $mainBlack
