fixed media for all components

--- a/src/components/Benefits/Benefits.sass
+++ b/src/components/Benefits/Benefits.sass
@@ -3,7 +3,12 @@
 .benefits
  padding: 44px 0 75px
  background-color: $mainGrey
+ &-img
+  // width: 458px
+  img
+   width: 100%
 
+   
 // .textarea
 //  border: 0
 //  background-color: $mainGrey
@@ -61,4 +66,8 @@
   //  background-color: #121212
   //  opacity: 0.1
    
- 
+@media screen and (max-width: 992px) 
+ .scrollbar
+  margin: 20px auto 0
+  &-text 
+   padding: 0 10px
