--- a/src/components/Logo/Logo.sass
+++ b/src/components/Logo/Logo.sass
@@ -1,9 +1,14 @@
 .logo
  position: fixed
- // position: absolute
  top: 5px
  z-index: 999
 
-@media screen and (max-width: 450px) 
+@media screen and (max-width: 576px) 
  .logo
   width: 60px
+  img
+   width: 100%
+@media screen and (max-width: 425px) 
+ .logo
+  width: 40px
+  
