--- a/src/components/CarouselSider/CarouselSider.sass
+++ b/src/components/CarouselSider/CarouselSider.sass
@@ -57,3 +57,117 @@
   background-color: lighten($mainYellow, 20%)
   color: $mainBlue
   text-decoration: none
+
+@media screen and (max-width: 1620px) 
+ .carousel-caption
+  top: 255px
+  left: 255px
+  
+ .carousel-indicators
+  left: 255px
+  
+@media screen and (max-width: 1520px) 
+ .carousel-caption
+  top: 255px
+  left: 204px
+  
+ .carousel-indicators
+  left: 204px
+@media screen and (max-width: 1420px) 
+ .carousel-caption
+  top: 255px
+  left: 157px
+  
+ .carousel-indicators
+  left: 157px
+@media screen and (max-width: 1320px) 
+ .carousel-caption
+  top: 255px
+  left: 105px
+  &:after
+   height: 200px
+  h3
+   margin-bottom: 20px
+  
+ .carousel-indicators
+  left: 105px
+  bottom: 10px
+  
+@media screen and (max-width: 1200px) 
+ .carousel-caption
+  top: 210px
+  left: 130px
+  
+ .carousel-indicators
+  left: 130px
+
+@media screen and (max-width: 992px) 
+ .carousel-caption
+  top: 135px
+  left: 149px
+  &:after
+   width: 0
+   height: 0
+   top: 0
+  h3
+   font-size: 25px
+ .carousel-indicators
+  left: 149px
+ .btn-offer
+  padding: 10px
+
+@media screen and (max-width: 850px) 
+ .carousel-caption
+  top: 105px
+  left: 80px
+ .carousel-indicators
+  left: 80px
+@media screen and (max-width: 768px) 
+ .carousel-caption
+  top: 90px
+  left: 125px
+ .carousel-indicators
+  left: 125px
+  li
+   margin-right: 5px
+   width: 8px
+   height: 8px
+@media screen and (max-width: 576px) 
+ .carousel-caption
+  top: 50px
+  left: 14px
+  h3
+   margin-bottom: 10px
+   font-size: 16px
+ .carousel-indicators
+  left: 14px
+  bottom: 0
+
+ .btn-offer
+  padding: 5px
+  font-size: 8px
+  border-radius: 5px
+
+@media screen and (max-width: 425px) 
+ .carousel-caption
+  top: 50px
+  left: 14px
+  h3
+   margin-bottom: 10px
+   font-size: 12px
+ .carousel-indicators
+  left: 14px
+  bottom: 0
+  li
+   margin-right: 1px
+ .btn-offer
+  padding: 5px
+  font-size: 6px
+  border-radius: 3px
+
+@media screen and (max-width: 375px) 
+ .carousel-caption
+  padding: 5px
+  top: 43px
+  h3
+   margin-bottom: 0
