--- a/src/components/Contacts/Contacts.sass
+++ b/src/components/Contacts/Contacts.sass
@@ -50,7 +50,7 @@
     &:last-child
      margin-left: 10px
 
-@media screen and (max-width: 450px) 
+@media screen and (max-width: 576px) 
  .contacts
   font-size: 10px
   &-location
@@ -59,6 +59,18 @@
   &-phone
    img
     width: 10px
+  &-social
+   img
+    width: 16px
+@media screen and (max-width: 425px) 
+ .contacts
+  font-size: 8px
+  &-location
+   img
+    width: 8px
+  &-phone
+   img
+    width: 8px
   &-social
    img
     width: 16px
