--- a/src/components/Title/Title.sass
+++ b/src/components/Title/Title.sass
@@ -2,12 +2,18 @@
  text-align: left
  margin-bottom: 57px
 
-.section-title h4
- font-size: 24px
- text-transform: uppercase
- font-weight: 700
+.section-title 
+ h4
+  font-size: 24px
+  text-transform: uppercase
+  font-weight: 700
 
 @media (max-width: 992px)
  .section-title
   text-align: center
   margin-bottom: 17px
+
+@media screen and (max-width: 590px)
+ .section-title 
+  h4
+   font-size: 16px
