--- a/src/components/FormValid/FormValid.sass
+++ b/src/components/FormValid/FormValid.sass
@@ -1,4 +1,5 @@
 @import '../../colors.sass' 
+@import '../../fonts.scss' 
 
 .form
  position: relative
@@ -26,6 +27,7 @@
   // opacity: 0.4
   background-color: transparent 
   width: 183px 
+  
   &:focus
    color: $mainWhite
    border: none
@@ -46,7 +48,7 @@
   // color: $mainWhite
   &:focus
    outline: none
-   color: $mainWhite
+   
   option
    color: $mainBlack
    &:hover
