--- a/src/components/FormikForm/Error.sass
+++ b/src/components/FormikForm/Error.sass
@@ -1,6 +1,9 @@
 .form-message 
  font-size: 10px
- padding-top: 2p
+ padding-top: 2px
+ // position: absolute
+ // left: 55%
+ // bottom: 10%
 
 .form-message.valid 
  color: #4caf50
