--- a/src/components/FormikForm/FormikForm.sass
+++ b/src/components/FormikForm/FormikForm.sass
@@ -1,13 +1,18 @@
 .formik-form 
  width: 100%
- max-width: 600px
+ max-width: 400px
  margin: 25px auto
 
 
 .input-row 
- margin: 25px 0px
-
-label 
+ margin-bottom: 10px
+ // width: 100%
+ display: flex
+ justify-content: space-between
+ align-items: center
+.button-row
+ text-align: center 
+label
  // display: block
  // padding-bottom: 5px
 
@@ -15,12 +20,12 @@ input
  // width: 100%
  padding: 5px
 
-button 
- border-radius: 0px
- padding: 5px 15px
- background: none;
- border: 1px solid #607d8b
- cursor: pointer
+// button 
+//  border-radius: 0px
+//  padding: 5px 15px
+//  background: none;
+//  border: 1px solid #607d8b
+//  cursor: pointer
 
 
 
