--- a/src/components/Modal/Modal.sass
+++ b/src/components/Modal/Modal.sass
@@ -1,5 +1,5 @@
 .modal
- &-offer
+ &-overlay
   padding: 20px
   background-color: rgba(0,0,0,0.3)
   // width: 50%
@@ -15,14 +15,14 @@
   // justify-content: center
   
 
- &-contents
+ &-windows
   margin: 0 auto
   padding: 20px 10px
   width: 55%
   background-color: #f3f8ff
   h2
    text-align: center
- &-main
+ &-body
   display: flex
   align-items: center
   
