--- a/src/components/Modal/Modal.sass
+++ b/src/components/Modal/Modal.sass
@@ -1,4 +1,4 @@
-.modal
+.modals
  &-overlay
   padding: 20px
   background-color: rgba(0,0,0,0.3)
@@ -20,8 +20,20 @@
   padding: 20px 10px
   width: 55%
   background-color: #f3f8ff
+ &-header
+  position: relative
   h2
    text-align: center
+  button
+   width: 30px
+   height: 30px
+   border-radius: 50%
+   background-color: transparent
+   border: none
+   font-size: 20px
+   position: absolute
+   right: 0
+   top: 0
  &-body
   display: flex
   align-items: center
