add pages and route

--- a/src/components/Button/Button.sass
+++ b/src/components/Button/Button.sass
@@ -1,17 +1,13 @@
 @import '../../colors.sass'   
 
 .btn-offer
- display: inline-block
- text-decoration: none
- color: $mainBlack 
+ padding: 17px 30px
  background-color: $mainYellow
- padding: 17px 20px
+ color: $mainBlack
  border-radius: 10px
  border: 0
- // border: 3px solid $mainYellow
  transition: all 0.3s linear
- // cursor: pointer
  &:hover 
-  background-color: darken($mainYellow, 15%)
+  // background-color: darken($mainYellow, 15%)
+  background-color: $bgFooter
   color: $mainWhite
-  text-decoration: none
