--- a/src/components/Title/Title.sass
+++ b/src/components/Title/Title.sass
@@ -1,3 +1,5 @@
+@import '../../fonts.scss' 
+
 .section-title
  text-align: left
  margin-bottom: 57px
@@ -6,7 +8,7 @@
  h4
   font-size: 24px
   text-transform: uppercase
-  font-weight: 700
+  +bold
 
 @media (max-width: 992px)
  .section-title
