AroundWorld is ready for page Company and media

--- a/src/colors.sass
+++ b/src/colors.sass
@@ -3,6 +3,7 @@ $mainBlue: #3397e2
 $mainWhite: #ffffff
 $mainGrey: #f8f7f7
 $secondGrey: #f3f3f3
+$thirddGrey: #5f5f5f
 $mainYellow: #fbd341
 $bgBunner: #004c84
 $bgFooter: #22334d
