--- a/src/components/Bunner/Bunner.sass
+++ b/src/components/Bunner/Bunner.sass
@@ -18,3 +18,15 @@
   color: $mainWhite
   font-size: 18px
   position: relative
+
+@media (max-width: 1200px)
+ .bunner
+  padding: 40px 60px
+
+@media (max-width: 768px)
+ .bunner
+  padding: 20px 40px
+
+@media (max-width: 540px)
+ .bunner
+  padding: 20px
