--- a/src/components/Hero/Hero.sass
+++ b/src/components/Hero/Hero.sass
@@ -2,7 +2,7 @@
 @import '../../colors.sass' 
 
 .about
- padding-top: 120px
+ padding-top: 100px
  background: url('../../img/company/about-us-bg.jpg') center/cover no-repeat
  // background-size: cover
  // background-repeat: no-repeat
@@ -25,3 +25,19 @@
   text-shadow: 4px 3px 16px rgba(14, 26, 38, 0.36)
   position: relative
   
+@media (max-width: 992px)
+ .about
+  h1
+   font-size: 40px
+
+@media (max-width: 540px)
+ .about
+  padding-top: 50px
+  h1
+   font-size: 36px
+
+@media (max-width: 480px)
+ .about
+  h1
+   padding-top: 50px
+   font-size: 26px
