create component Team, PersonCard

--- a/src/components/Crumb/Breadcrumbs.sass
+++ b/src/components/Crumb/Breadcrumbs.sass
@@ -1,3 +1,14 @@
+@import '../../fonts.scss' 
+@import '../../colors.sass' 
+
 .links
+ position: absolute
+ top: 130px
+ z-index: 1
  span
   margin-right: 5px
+  a
+   color: $mainBlack
+   &:hover
+    text-decoration: none
+    color: $mainYellow
