--- a/src/components/Hero/Hero.sass
+++ b/src/components/Hero/Hero.sass
@@ -2,7 +2,7 @@
 @import '../../colors.sass' 
 
 .about
- margin-top: 120px
+ // margin-top: 120px
  padding-top: 100px
  background: url('../../img/company/about-us-bg.jpg') center/cover no-repeat
  // background-size: cover
