--- a/src/components/PersonCard/PersonCard.sass
+++ b/src/components/PersonCard/PersonCard.sass
@@ -1,3 +1,6 @@
+@import '../../fonts.scss' 
+@import '../../colors.sass'
+
 .person-card
  padding: 45px 65px
  box-shadow: 4px 3px 16px 2px rgba(14, 26, 38, 0.11)
@@ -5,6 +8,51 @@
  background: #fff
  // z-index: 2
  &-img
+  img
+   width: 100%
  &-info
+  margin-top: 20px
   &__contacts
+   padding-bottom: 20px
+   display: flex
+   justify-content: space-between
+   align-items: center
+   font-size: 16px
+   border-bottom: 2px solid #f3f8ff
+   .number
+    a
+     color: $thirddGrey
+     vertical-align: middle
+     &:hover
+      text-decoration: none
+    img
+     width: 15px
+     height: 16px
+     margin-left: 5px
   &__text
+   margin-top: 20px
+   line-height: 24px
+   color: $thirddGrey
+   font-size: 16px
+
+@media (max-width: 1200px)
+ .person-card
+  padding: 20px 30px
+  width: 460px
+
+@media (max-width: 992px)
+ .person-card
+  width: 400px
+
+@media (max-width: 845px)
+ .person-card
+  margin: 0 auto 20px
+
+@media (max-width: 445px)
+ .person-card
+  max-width: 290px
+  &-info
+   &__contacts
+    flex-direction: column
+   &__text
+    text-align: center
