--- a/src/components/Team/Team.sass
+++ b/src/components/Team/Team.sass
@@ -1,20 +1,49 @@
 @import '../../fonts.scss' 
 @import '../../colors.sass' 
 
+.container
+ max-width: 1140px
+
 .team
  padding-top: 90px
- height: 530px
+ padding-bottom: 100px
+ //height: 530px
  background-color: $mainGrey
  &-title
   flex-basis: 50%
  &-header
   display: flex
-  // justify-content: space-between
+  margin-bottom: 40px
   p
-   font-size: 18px
+   font-size: 20px
    flex-basis: 50%
    line-height: 30px
    color: $thirddGrey
  &-body
   display: flex
-  margin: 0 auto
+  justify-content: space-between
+  flex-wrap: wrap
+  position: relative
+  z-index: 1
+  .shell, .photos
+   position: absolute
+   left: 50%
+   transform: translate(-50%)
+   z-index: -1
+  .shell
+   top: 50px
+  .photos
+   bottom: 30px
+
+@media (max-width: 992px)
+ .team
+  &-header
+   flex-direction: column
+   text-align: center
+
+@media (max-width: 845px)
+ .team
+  &-body
+   flex-direction: column
+   .shell, .photos
+    display: none
