create comp. Direction with media

--- a/src/components/AroundWorld/AroundWorld.sass
+++ b/src/components/AroundWorld/AroundWorld.sass
@@ -4,6 +4,7 @@
 .around-world
  padding-top: 165px
  padding-bottom: 110px
+ background-color: $mainGrey
  .container
   display: flex
   justify-content: space-between
