--- a/src/components/Team/Team.sass
+++ b/src/components/Team/Team.sass
@@ -7,8 +7,9 @@
 .team
  padding-top: 90px
  padding-bottom: 100px
- //height: 530px
- background-color: $mainGrey
+ height: 530px
+ background-color: $mainWhite
+ // background-color: $mainGrey
  &-title
   flex-basis: 50%
  &-header
@@ -37,6 +38,9 @@
 
 @media (max-width: 992px)
  .team
+  padding-top: 50px
+  padding-bottom: 60px
+  height: auto
   &-header
    flex-direction: column
    text-align: center
