fix path for img

--- a/src/components/Direction/Direction.sass
+++ b/src/components/Direction/Direction.sass
@@ -2,6 +2,7 @@
 @import '../../colors.sass'
 
 .direction
+ height: 300px
  &-wrap
   margin: 0 auto
   max-width: 95%
@@ -58,7 +59,8 @@
 
 @media (max-width: 992px)
  .direction
-  padding: 50px 0
+  padding: 50px 0 0
+  height: auto
   &-wrap
    transform: translateY(0)
    
