--- a/src/components/FeedbackCard/FeedbackCard.sass
+++ b/src/components/FeedbackCard/FeedbackCard.sass
@@ -1,2 +1,37 @@
 .feedback-card
- 
+ margin: 10px 15px
+ padding: 55px 25px
+ width: 350px
+ display: flex
+ flex-direction: column
+ align-items: center
+ transition: all 0.3s
+ box-shadow: 1px 1px 12px 1px rgba(14, 26, 38, 0.15)
+ cursor: pointer
+
+.card-img
+ width: 114px
+ height: 114px
+ position: relative
+ margin-bottom: 35px
+ &:after
+  content: ""
+  display: block
+  position: absolute
+  top: -10px
+  left: -12px
+  width: 140px
+  height: 140px
+  background: url(../../img/feedback/feedback-shape.png) no-repeat center center
+  background-size: contain
+ img
+  width: 114px
+  // width: 100%
+  border-radius: 50%
+  
+
+.shape
+ position: absolute
+ top: 0
+ left: 0
+ width: 140px
