--- a/src/fontello.scss
+++ b/src/fontello.scss
@@ -1,12 +1,12 @@
 @font-face {
  font-family: 'fontello';
    font-display: swap;
- src: url('./fonts/Fontello/fontello.eot?15116718');
- src: url('./fonts/Fontello/fontello.eot?15116718#iefix') format('embedded-opentype'),
-      url('./fonts/Fontello/fontello.woff2?15116718') format('woff2'),
-      url('./fonts/Fontello/fontello.woff?15116718') format('woff'),
-      url('./fonts/Fontello/fontello.ttf?15116718') format('truetype'),
-      url('./fonts/Fontello/fontello.svg?15116718#fontello') format('svg');
+ src: url('./fonts/Fontello/fontello.eot?19496376');
+ src: url('./fonts/Fontello/fontello.eot?19496376#iefix') format('embedded-opentype'),
+      url('./fonts/Fontello/fontello.woff2?19496376') format('woff2'),
+      url('./fonts/Fontello/fontello.woff?19496376') format('woff'),
+      url('./fonts/Fontello/fontello.ttf?19496376') format('truetype'),
+      url('./fonts/Fontello/fontello.svg?19496376#fontello') format('svg');
  font-weight: normal;
  font-style: normal;
 }
@@ -56,22 +56,6 @@
  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-partnership:before { content: '\e800'; } /* 'î €' */
-.icon-down:before { content: '\e801'; } /* 'î ' */
-.icon-star:before { content: '\e802'; } /* 'î ‚' */
-.icon-location:before { content: '\e803'; } /* 'î ƒ' */
-.icon-left:before { content: '\e804'; } /* 'î „' */
-.icon-right:before { content: '\e805'; } /* 'î …' */
-.icon-shield:before { content: '\e806'; } /* 'î †' */
-.icon-support:before { content: '\e807'; } /* 'î ‡' */
-.icon-world:before { content: '\e808'; } /* 'î ˆ' */
-.icon-badge:before { content: '\e809'; } /* 'î ‰' */
-.icon-credit-card:before { content: '\e80a'; } /* 'î Š' */
-.icon-hotel:before { content: '\e80b'; } /* 'î ‹' */
-.icon-location-1:before { content: '\e80c'; } /* 'î Œ' */
-.icon-phone:before { content: '\e80d'; } /* 'î ' */
-.icon-star-empty:before { content: '\e80e'; } /* 'î Ž' */
-.icon-right-small:before { content: '\e80f'; } /* 'î ' */
-.icon-left-small:before { content: '\e810'; } /* 'î ' */
-.icon-facebook:before { content: '\f09a'; } /* 'ï‚š' */
-.icon-instagram:before { content: '\f16d'; } /* 'ï…­' */
+.icon-star-empty-1:before { content: '\e800'; } /* '' */
+
+
