--- a/src/components/SliderFeedback/SliderFeedback.sass
+++ b/src/components/SliderFeedback/SliderFeedback.sass
@@ -4,3 +4,26 @@
 .feedback
  padding: 100px 0
   
+/*кнопка для перелистывания*/
+.arrow
+ position: absolute
+ top: 50%
+ //transform: translateY(-50%)
+ z-index: 99
+ width: 2rem
+ height: 2rem
+ border: none
+
+/*кнопка назад*/
+.prev
+ background: url('../../img/icons/left-arrow.png') no-repeat center
+ background-size: 70%
+ left: 0
+
+/*кнопка вперед*/
+.next
+ background: url('../../img/icons/right-arrow.png') no-repeat center
+ background-size: 70%
+ right: 0
+
+.slick-prev, .slick-next
