--- a/src/components/FeedbackCard/FeedbackCard.sass
+++ b/src/components/FeedbackCard/FeedbackCard.sass
@@ -3,9 +3,9 @@
 
 
 .feedback-card
- margin: 10px 15px
+ margin: 5px auto
  padding: 55px 25px
- width: 350px
+ width: 345px
  display: flex
  flex-direction: column
  align-items: center
