--- a/src/components/SliderFeedback/SliderFeedback.sass
+++ b/src/components/SliderFeedback/SliderFeedback.sass
@@ -11,6 +11,7 @@
   // background-size: 70%
   left: 40%
   bottom: -60px
+  // transform: translate(0, -50%)
   font-size: 26px
 
  /*кнопка вперед*/
@@ -20,3 +21,29 @@
   right: 40%
   bottom: -60px
   font-size: 26px
+ 
+ &-dots
+  position: absolute
+  bottom: -50px
+  right: 50%
+  transform: translate(50%, 0)
+  display: flex !important
+  // width: 100%
+  // text-align: center
+  li
+   margin: 0 5px
+   button
+    width: 15px
+    height: 15px
+    border-radius: 50%
+    border: 0
+    background-color: rgba(15, 56, 98, 0.2)
+    font-size: 0
+    transition: all .25s
+    outline: none
+  li.slick-active
+   button
+    background-color: $bgHeader
+    transform: scale(1.1)
+  
+   
