finished media for SlisderFeedback

--- a/src/components/FeedbackCard/FeedbackCard.sass
+++ b/src/components/FeedbackCard/FeedbackCard.sass
@@ -74,3 +74,13 @@
   color: $mainYellow
  &:focus
   outline: none
+
+@media screen and (max-width: 1200px) 
+ .feedback-card
+  padding: 55px 10px
+  width: 300px
+@media screen and (max-width: 350px) 
+ .feedback-card
+  padding: 40px 10px
+  width: 250px
+
