--- a/src/components/SliderTour/SliderTour.sass
+++ b/src/components/SliderTour/SliderTour.sass
@@ -15,7 +15,7 @@
     color: $mainYellow
 
 // контейнер для слайдера
-.slick-slider
+.tour-slider
  max-width: 1727px
  margin: auto
 
@@ -27,37 +27,37 @@
  right: 30px
 
 @media screen and (max-width: 1800px) 
- .slick-slider
+ .tour-slider
   max-width: 1625px
  .slick-next
   right: 0
 
 @media screen and (max-width: 1700px) 
- .slick-slider
+ .tour-slider
   max-width: 1111px
  .slick-next
   right: 10px
 
 @media screen and (max-width: 1200px) 
- .slick-slider
+ .tour-slider
   max-width: 520px
  .slick-next
   right: -23px
 
 @media screen and (max-width: 992px) 
- .slide-tour
+ .tour-slider
   padding: 25px 0 
-  &-nav
-   padding-bottom: 30px
+ .slide-tour-nav
+  padding-bottom: 30px
 
 @media screen and (max-width: 590px)
- .slide-tour
+ .tour-slider
   padding: 20px 10px 70px 
-  &-nav
-   padding-bottom: 20px
-   li
-    a
-     font-size: 14px
- .slick-slider
+ .slide-tour-nav
+  padding-bottom: 20px
+  li
+   a
+    font-size: 14px
+ .tour-slider
   max-width: 519px
  .slick-next
