--- a/src/components/SliderFeedback/SliderFeedback.sass
+++ b/src/components/SliderFeedback/SliderFeedback.sass
@@ -46,4 +46,17 @@
     background-color: $bgHeader
     transform: scale(1.1)
   
-   
+@media screen and (max-width: 850px) 
+ .feedback
+  padding-top: 50px
+  &-prev
+   left: 25%
+  &-next
+   right: 25%
+
+@media screen and (max-width: 570px) 
+ .feedback
+  &-prev
+   left: 5%
+  &-next
+   right: 5%
