create  comp. ButtonClose,  ModalFeedback

--- a/src/components/Modal/Modal.sass
+++ b/src/components/Modal/Modal.sass
@@ -29,11 +29,12 @@
    height: 30px
    border-radius: 50%
    background-color: transparent
-   border: none
+   border: 0
    font-size: 20px
+   outline: none
    position: absolute
    right: 0
-   top: 0
+   top: -10px
  &-body
   display: flex
   align-items: center
