ModalFeedback is ready

--- a/src/components/ButtonClose/ButtonClose.sass
+++ b/src/components/ButtonClose/ButtonClose.sass
@@ -1,8 +1,8 @@
-button
- // width: 30px
- // height: 30px
- // border-radius: 50%
- // background-color: transparent
- // border: 0
- // font-size: 20px
- // outline: none
+.btn-close
+ width: 30px
+ height: 30px
+ background-color: transparent
+ border: 0
+ font-size: 20px
+ &:focus
+  outline: none
