--- a/src/components/Modal/Modal.sass
+++ b/src/components/Modal/Modal.sass
@@ -24,14 +24,7 @@
   position: relative
   h2
    text-align: center
-  button
-   width: 30px
-   height: 30px
-   border-radius: 50%
-   background-color: transparent
-   border: 0
-   font-size: 20px
-   outline: none
+  &__btn
    position: absolute
    right: 0
    top: -10px
