--- a/src/components/ModalFeedback/ModalFeedback.sass
+++ b/src/components/ModalFeedback/ModalFeedback.sass
@@ -7,7 +7,7 @@
   left: 0
   z-index: 1000
   background-color: rgba(28, 28, 28, 0.4)
- &-feedback
+ &-wrap
   padding: 50px 70px
   background-color: #fff
   border-radius: 5px
@@ -16,7 +16,7 @@
   top: 50%
   transform: translate(-50%, -50%)
   max-width: 1000px
-  button
+  &__btn
    position: absolute
    top: 0
-   right: 0
+   right: 0px
