functional ModalFeedback is work

--- a/src/components/ModalFeedback/ModalFeedback.sass
+++ b/src/components/ModalFeedback/ModalFeedback.sass
@@ -8,7 +8,7 @@
   z-index: 1000
   background-color: rgba(28, 28, 28, 0.4)
  &-wrap
-  padding: 50px 70px
+  padding: 40px 50px
   background-color: #fff
   border-radius: 5px
   position: absolute
@@ -20,3 +20,16 @@
    position: absolute
    top: 0
    right: 0px
+ &-img-wrap
+  &:after
+   left: 50%
+   transform: translateX(-50%)
+ &-face
+  margin: auto
+ &-stars
+  margin: 20px auto
+
+ &-info
+  text-align: center
+  p
+   height: auto
