add comp.Timer and installed react-reveal

--- a/src/components/ModalFeedback/ModalFeedback.sass
+++ b/src/components/ModalFeedback/ModalFeedback.sass
@@ -28,8 +28,18 @@
   margin: auto
  &-stars
   margin: 20px auto
-
  &-info
   text-align: center
   p
    height: auto
+
+@media screen and (max-width: 992px)
+ .modal
+  &-wrap
+   width: 80%
+   padding: 30px 
+@media screen and (max-width: 600px) 
+ .modal
+  &-wrap
+   width: 90%
+   padding: 20px
