add logic for Timer

--- a/src/components/CarouselSider/CarouselSider.sass
+++ b/src/components/CarouselSider/CarouselSider.sass
@@ -1,7 +1,8 @@
 @import '../../colors.sass'    
 @import '../../fonts.scss'    
  
-.carousel
+.slider
+ position: relative
 .carousel-control-prev-icon, .carousel-control-next-icon
  background-image: none
 
