--- a/src/components/Timer/Timer.sass
+++ b/src/components/Timer/Timer.sass
@@ -1,36 +1,41 @@
-.countdown-wrapper 
+@import '../../colors.sass'  
+
+.countdown 
  position: absolute
- bottom: 92px
+ bottom: 0
  right: 0
- color: #ffffff
+ color: $mainYellow
+ &-title
+  font-size: 16px
+  padding: 5px
+  display: inline-block
+  text-transform: uppercase
+ &-body 
+  display: flex
+  padding: 5px
+ &-item
+  width: 80px
+ &-time 
+  font-size: 30px
+ &-tag 
+  text-transform: uppercase
+  font-size: 16px
 
+@media screen and (max-width: 768px) 
+ .countdown
+  &-title
+   padding: 0
+   font-size: 10px
+  &-body
+   padding: 5px
+  &-item
+   width: 50px
+  &-time 
+   font-size: 20px
+  &-tag
+   font-size: 12px 
 
-.countdown-wrapper .countdown-top 
- background: #ff4800
- font-size: 19px
- padding: 10px
- display: inline-block
- text-transform: uppercase
-
-
-.countdown-wrapper .countdown-bottom 
- display: flex
- background: red
- padding: 5px 10px
-
-
-.countdown-wrapper .countdown-time 
- font-size: 30px
- border-right: 1px solid red
- margin-right: 14px
- padding-right: 49px
-
-.countdown-wrapper .countdown-item:last-child .countdown-time
- border:none
-
-
-.countdown-wrapper .countdown-tag 
- text-transform: uppercase
- font-size: 20px
- padding-left: 7px
-
+@media screen and (max-width: 425px) 
+ .countdown
+  display: none
+ 
