add animation for all components

--- a/src/components/FeedbackCard/FeedbackCard.sass
+++ b/src/components/FeedbackCard/FeedbackCard.sass
@@ -29,13 +29,15 @@
   background-size: contain
 
 .face
- width: 113px
- height: 114px
  margin-bottom: 35px
  overflow: hidden
  border-radius: 50%
  img
-  height: 100%
+  width: 113px
+  height: 114px
+  object-fit: cover
+  // height: 100%
+  
 
  //рамка с сердечком 
 // .shape
