--- a/src/components/PersonCard/PersonCard.sass
+++ b/src/components/PersonCard/PersonCard.sass
@@ -5,6 +5,7 @@
  padding: 45px 65px
  box-shadow: 4px 3px 16px 2px rgba(14, 26, 38, 0.11)
  width: 520px
+ height: 655px
  background: #fff
  // z-index: 2
  &-img
@@ -46,6 +47,7 @@
 
 @media (max-width: 845px)
  .person-card
+  height: auto
   margin: 0 auto 20px
 
 @media (max-width: 445px)
