--- a/src/components/Contacts/Contacts.sass
+++ b/src/components/Contacts/Contacts.sass
@@ -5,7 +5,7 @@
  // position: absolute
  position: fixed
  top: 0
- right: 13%
+ right: 14%
  padding: 23px 0 17px
  display: flex
  justify-content: flex-end
@@ -13,24 +13,27 @@
  +bold
  color: $secondGrey
  z-index: 999
- 
+ opacity: 0.8
  &-location
-  span
-   margin-left: 13px
-   opacity: 0.8
  &-phone
   margin-left: 41px
+  position: relative
+  &:after
+   content: '(viber, telegram)'
+   position: absolute
+   top: 0
+   right: -112px
+   // width: 50px
   a
    margin-left: 3px
    color: $secondGrey
-   opacity: 0.8
    &:hover
     text-decoration: none
  &-social
-  margin-left: 62px
+  margin-left: 120px
   img
    &:last-child
-    margin-left: 25px
+    margin-left: 15px
 
 @media screen and (max-width: 992px) 
  .contacts
