--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -36,9 +36,11 @@
   margin-bottom: 20px
  &-social
   margin-top: 42px
-  img
-   margin-right: 30px
-
+  a
+   background-color: $secondGrey
+   svg
+    color: $bgHeader
+  
 .line
  width: 100%
  border-top: 1px solid #f7f8f9
