--- a/src/components/Location/Location.sass
+++ b/src/components/Location/Location.sass
@@ -2,13 +2,24 @@
 
 .location
  margin-top: 120px
- &__content
- &__description
+ &-content
+  font-size: 16px
+ &-description
   padding-bottom: 45px
   color: $thirddGrey
-  font-size: 16px
-  height: auto
   border-bottom: 1px solid $LineColor
- &__point
-
- &__img
+ &-info
+  margin-top: 30px
+ &-point
+  padding: 10px 0
+ &-phone
+  padding: 10px 0
+  a
+   font-size: 16px 
+ &-join
+  margin-top: 20px
+  display: flex
+  align-items: center
+  p
+   margin-right: 30px
+   font-size: 18px
