--- a/src/components/Location/Location.sass
+++ b/src/components/Location/Location.sass
@@ -2,6 +2,7 @@
 
 .location
  margin-top: 120px
+ background-color: $mainGrey
  &-content
   font-size: 16px
  &-description
@@ -23,3 +24,13 @@
   p
    margin-right: 30px
    font-size: 18px
+
+@media (max-width: 992px)
+ .location
+  &-content
+   margin-bottom: 30px  
+   text-align: center 
+  &-join
+   justify-content: center
+   p
+    font-size: 16px
