add animation for OurContacts, designed Error page

--- a/src/components/Location/Location.sass
+++ b/src/components/Location/Location.sass
@@ -2,7 +2,13 @@
 
 .location
  margin-top: 120px
- background-color: $mainGrey
+ 
+ // &-img
+ //  position: absolute
+ //  top: 0
+ //  left: 0
+ //  width: 100%
+ //  height: auto
  &-content
   font-size: 16px
  &-description
