fixed OurContacts, add new img for CarouselSlider

--- a/src/components/Location/Location.sass
+++ b/src/components/Location/Location.sass
@@ -1,8 +1,11 @@
 @import '../../colors.sass'
 
 .location
- margin-top: 120px
- 
+ padding-top: 160px
+ background-image: url('../../img/our-contacts/3.jpg')
+ background-position: 32% 0%
+ background-repeat: no-repeat
+ background-size: cover
  // &-img
  //  position: absolute
  //  top: 0
@@ -11,9 +14,10 @@
  //  height: auto
  &-content
   font-size: 16px
+  // color: $mainWhite
  &-description
   padding-bottom: 45px
-  color: $thirddGrey
+  // color: $mainWhite
   border-bottom: 1px solid $LineColor
  &-info
   margin-top: 30px
@@ -22,7 +26,8 @@
  &-phone
   padding: 10px 0
   a
-   font-size: 16px 
+   font-size: 16px
+   color: $mainBlack 
  &-join
   margin-top: 20px
   display: flex
