--- a/src/components/CarouselSider/CarouselSider.sass
+++ b/src/components/CarouselSider/CarouselSider.sass
@@ -6,27 +6,31 @@
 .carousel-control-prev-icon, .carousel-control-next-icon
  background-image: none
 
-//заголовок
-.carousel-caption
- // left: 0
- text-align: left
- top: 330px
- left: 399px
- &:after
-  content: ''
-  width: 1352px
-  height: 228px
-  background-color: $bgBunner
-  background-image: linear-gradient(-264deg, rgba(15, 37, 71, 0.07) 0%, rgba(34, 51, 77, 0) 100%)
-  opacity: 0.49
-  position: absolute
-  top: -20px
-  left: -399px
-  z-index: -1
- h3
-  margin-bottom: 41px
-  +bold
-  font-size: 30px
+
+.carousel
+ &-item
+  img
+   height: 100vh
+ &-caption
+  // left: 0
+  text-align: left
+  top: 330px
+  left: 399px
+  &:after
+   content: ''
+   width: 1352px
+   height: 228px
+   background-color: $bgBunner
+   background-image: linear-gradient(-264deg, rgba(15, 37, 71, 0.07) 0%, rgba(34, 51, 77, 0) 100%)
+   opacity: 0.49
+   position: absolute
+   top: -20px
+   left: -399px
+   z-index: -1
+  h3
+   margin-bottom: 41px
+   +bold
+   font-size: 30px
 
 
 
