--- a/src/components/Contacts/Contacts.sass
+++ b/src/components/Contacts/Contacts.sass
@@ -9,6 +9,7 @@
  display: flex
  justify-content: flex-end
  align-items: center
+ flex-wrap: wrap
  background-color: transparent
  +bold
  color: $secondGrey
@@ -41,21 +42,20 @@
 
 @media screen and (max-width: 992px) 
  .contacts
-  padding: 10px 
+  // padding: 10px 
   display: flex
+  
+  justify-content: center
   flex-direction: column
+  align-items: center
+  // right: 0
   &-location
-   span
   &-phone
    margin-left: 0
    a
     margin-left: 3px
   &-social
    margin-left: 0
-   text-align: center
-   img
-    &:last-child
-     margin-left: 10px
 
 @media screen and (max-width: 576px) 
  .contacts
