optimization Header, CarouselSlider

--- a/src/components/Button/Button.sass
+++ b/src/components/Button/Button.sass
@@ -11,3 +11,7 @@
   // background-color: darken($mainYellow, 15%)
   background-color: $bgFooter
   color: $mainWhite
+
+@media screen and (max-width: 425px) 
+ .btn-offer
+  padding: 14px 15px
