--- a/src/components/Logo/Logo.sass
+++ b/src/components/Logo/Logo.sass
@@ -1,14 +1,11 @@
 .logo
- position: fixed
- top: 5px
- z-index: 999
+ // position: fixed
+ // top: 3%
+ // z-index: 999
 
 @media screen and (max-width: 576px) 
- .logo
-  width: 60px
-  img
-   width: 100%
-@media screen and (max-width: 425px) 
- .logo
-  width: 40px
+ // .logo
+ //  width: 60px
+ //  img
+ //   width: 100%
   
